# RustDesignPattern

./: Cargo.toml
src/: main.rs
src/ConcurrentMode/: actor_pattern.rs  fork_join.rs  future_promise.rs  master_worker.rs  mod.rs  pipeline_pattern.rs  producer_consumer.rs  reactor_pattern.rs  worker_pool.rs
src/DistributedSystemMode/: mod.rs
src/DistributedSystemMode/CommunicationPatterns/: api_gateway.rs  mod.rs
src/DistributedSystemMode/DataConsistencyPatterns/: mod.rs  saga_pattern.rs
src/DistributedSystemMode/DataManagementPatterns/: database_per_service.rs  database_sharding.rs  mod.rs
src/DistributedSystemMode/DeploymentPatterns/: mod.rs
src/DistributedSystemMode/LoadBalancingPatterns/: load_balancer.rs  mod.rs
src/DistributedSystemMode/ObservabilityPatterns/: distributed_tracing.rs  mod.rs
src/DistributedSystemMode/ResiliencePatterns/: circuit_breaker.rs  mod.rs  retry.rs
src/DistributedSystemMode/ServiceDiscoveryPatterns/: mod.rs  service_registry.rs
src/EnterpriseAppPattern/: mod.rs
src/EnterpriseAppPattern/BasePatterns/: gateway.rs  layer_supertype.rs  mapper.rs  mod.rs  money.rs  plugin.rs  registry.rs  separated_interface.rs  special_case.rs  value_object.rs
src/EnterpriseAppPattern/DataSourceArchitecturalPatterns/: active_record.rs  data_mapper.rs  mod.rs  row_data_gateway.rs  table_data_gateway.rs
src/FunctionalProgrammingPattern/: closures.rs  currying.rs  function_composition.rs  functor_pattern.rs  higher_order_functions.rs  immutability_pattern.rs  lazy_evaluation.rs  mod.rs  monad_pattern.rs
src/GoFDesignPattern/: mod.rs
(+72 files in other folders)
